# parspec-assignment

./: .gitignore  README.md  app.py  image_classification.ipynb  main.py  pyproject.toml  readme.md  requirements.txt
backend/: .gitignore  main.py  requirements.txt
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
