[project]
name = "parspec-assignment"
version = "0.1.0"
description = "Parspec Assignment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.3",
    "flask-cors>=5.0.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "scikit-learn>=1.5.2",
    "tensorflow[and-cuda]>=2.18.0",
]

[tool.uv.workspace]
members = ["backend"]
